--- a/views/ajaxSnippets/validationResult.ejs
+++ b/views/ajaxSnippets/validationResult.ejs
@@ -205,7 +205,7 @@
         let params = `scrollbars=no,resizable=no,status=no,location=no,toolbar=no,
                     menubar=no,width=400,height=600,left=1000,top=20`;
 
-        open(`/subscribe?carPlate=${carPlate}`, 'subscribe', params);
+        open(`/subscribe?carPlate=${carPlate}`, '_self', params);
     });
 
     function renewSubscriptionTrigger(element) {
