--- a/views/cars/create.ejs
+++ b/views/cars/create.ejs
@@ -74,7 +74,7 @@
                                                         </div>
                                                     </div>
                                                     <% } %>
-                                                    <%- include('./formFields.ejs', {allMakes, car: null, userCars}); %>
+                                                    <%- include('./formFields.ejs', {allMakes, car: null, userCars, carPlate: null}); %>
                                                 </div>
                                                 <div class="row">
                                                     <div class="mt-3">
