Add policies in emails. Error handler in checkout js function.

--- a/src/utils/template/activateAccount.handlebars
+++ b/src/utils/template/activateAccount.handlebars
@@ -112,9 +112,13 @@
                           <a class="button" href="{{reset_link}}" title="Reset Password" style="width: 100%; background: #22D172; text-decoration: none; display: inline-block; padding: 10px 0; color: #fff; font-size: 14px; line-height: 21px; text-align: center; font-weight: bold; border-radius: 7px;">Activate Account</a>
                         </td>
                       </tr>
-                     
+                       <tr>
+                      <td>
+                         <a class="button" href="https://memberships.autocarepr.com/termsandconditions" target="_blank" title="Terms and Conditions">Terms and Conditions</a>
+                      </td>
+                     </tr>
                       <tr>
-                        <td style="padding: 0 0 16px;">
+                        <td style="padding: 16px 0;">
                           <span style="display: block; width: 117px; border-bottom: 1px solid #8B949F;"></span>
                         </td>
                       </tr>
