--- a/views/auth/activateAccountRequest.ejs
+++ b/views/auth/activateAccountRequest.ejs
@@ -23,8 +23,7 @@
     <link rel="stylesheet" href="../../vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
     <!-- endinject -->
     <!-- Plugin css for this page -->
-    <!-- Plugin css for this page -->
-    <link rel="stylesheet" href="../../js/select.dataTables.min.css">
+
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../../css/vertical-layout-light/style.css">
@@ -37,53 +36,77 @@
         <div class="container-fluid page-body-wrapper full-page-wrapper">
             <div class="content-wrapper d-flex align-items-center auth px-0">
                 <div class="row w-100 mx-0">
-                    <div class="col-lg-8 mx-auto">
-                        <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-                            <a class="btn btn-outline-primary btn-icon-text float-start" id="close-registration"
-                                href="/">
-                                <i class="fa-solid fa-arrow-left m-1 mb-0 mt-0"></i> Login
-                            </a>
-                            <div class="brand-logo text-center">
-                                <img src="/images/charlieBoy/CB-5.jpg" alt="logo" style="width: 25% !important;">
-                            </div>
 
-                            <h4>
-                                Activate Account Request
-                            </h4>
-                            <% if (messages.error) { %>
-                            <p class="error">
-                                <%= messages.error %>
-                            </p>
-                            <% } %>
+                    <div class="col-lg-5 col-m-6 col-sm-12 mx-auto">
+                        <div class="py-4 px-4 px-sm-5">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="card">
+                                        <div class="m-0">
+                                            <a class="btn float-end" id="close-registration" href="/">
+                                                Login
+                                            </a>
+                                        </div>
+                                        <div class="card-body">
+                                            <div class="card-title d-flex flex-nowrap">
+                                                <div class="brand-logo text-center mb-1 w-100">
+                                                    <a href="/account">
+                                                        <img src="/images/charlieBoy/CB-5.jpg" alt="logo"
+                                                            style="width: 50% !important;">
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <h4 class="card-title text-center">
+                                                Activate Account Request
+                                            </h4>
+                                            <div class="text-center">
+                                                <% if (messages.error) { %>
+                                                <p class="error">
+                                                    <%= messages.error %>
+                                                </p>
+                                                <% } %>
 
-                            <% if (messages.info) { %>
-                            <p class="info">
-                                <%= messages.info %>
-                            </p>
-                            <% } %>
-                            <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
-                            <form id="form-activate-account" class="pt-3" action="/activateAccountRequest" method="post">
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <div class="form-group">
-                                            <label class="required" for="email"><%= lingua.user.email%></label>
-                                            <input type="email" id="email" name="email"
-                                                class="form-control form-control-lg" placeholder="example@gmail.com"
-                                                required />
+                                                <% if (messages.info) { %>
+                                                <p class="info">
+                                                    <%= messages.info %>
+                                                </p>
+                                                <% } %>
+                                                <% if (messages.warning) { %>
+                                                <p class="warning">
+                                                    <%= messages.warning %>
+                                                </p>
+                                                <% } %>
+                                            </div>
 
+                                            <form id="form-activate-account" class="pt-3"
+                                                action="/activateAccountRequest" method="post">
+                                                <div class="row">
+                                                    <div class="col-lg-12">
+                                                        <div class="form-group">
+                                                            <label class="required"
+                                                                for="email"><%= lingua.user.email%></label>
+                                                            <input type="email" id="email" name="email"
+                                                                class="form-control form-control-lg"
+                                                                placeholder="example@gmail.com" required />
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="mt-3">
+                                                        <button
+                                                            class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
+                                                            type="submit"> Request</button>
+                                                    </div>
+                                                </div>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="mt-3">
-                                        <button
-                                            class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
-                                            type="submit"> Request</button>
-                                    </div>
-                                </div>
-                            </form>
+                            </div>
                         </div>
                     </div>
+
                 </div>
             </div>
             <!-- content-wrapper ends -->
@@ -105,7 +128,6 @@
     <script src="../../js/template.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
-    <script src="../../js/dashboard.js"></script>
     <script src="./js/jquery.cookie.js" type="text/javascript"></script>
 </body>
 
