--- a/views/auth/resetPassword.ejs
+++ b/views/auth/resetPassword.ejs
@@ -35,26 +35,27 @@
         <div class="container-fluid page-body-wrapper full-page-wrapper">
             <div class="content-wrapper d-flex align-items-center px-0">
                 <div class="row w-100 mx-0">
-                    <div class="col-lg-8 mx-auto">
-                        <div class="text-left py-5 px-4 px-sm-5">
+                    <div class="col-lg-5 col-m-6 col-sm-12 mx-auto">
+                        <div class="py-4 px-4 px-sm-5">
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="card">
+                                        <div class="m-0">
+                                            <a class="btn float-end" id="close-registration" href="/">
+                                                 Login
+                                            </a>
+                                        </div>
                                         <div class="card-body">
+
                                             <div class="card-title d-flex flex-nowrap">
-                                                <div class="w-100">
-                                                    <a class="btn btn-outline-primary btn-icon-text float-start"
-                                                        id="close-registration" href="/">
-                                                        <i class="fa-solid fa-arrow-left m-1 mb-0 mt-0"></i> Login
+                                                <div class="brand-logo text-center mb-1 w-100">
+                                                    <a href="/account">
+                                                        <img src="/images/charlieBoy/CB-5.jpg" alt="logo"
+                                                            style="width: 50% !important;">
                                                     </a>
                                                 </div>
-                                                <div class="brand-logo text-center mb-1 w-100">
-                                                    <img src="/images/charlieBoy/CB-5.jpg" alt="logo"
-                                                        style="width: 80% !important;">
-                                                </div>
-                                                <div class="w-100"></div>
                                             </div>
-                                            <h4 class="card-title">
+                                            <h4 class="card-title text-center">
                                                 Create New Password
                                             </h4>
                                             <div class="text-center">
@@ -75,10 +76,11 @@
                                                 </p>
                                                 <% } %>
                                             </div>
+
                                             <form id="form-forgot-password" class="pt-3" action="/resetPassword"
                                                 method="post">
                                                 <div class="row">
-                                                    <div class="col-lg-6">
+                                                    <div class="col-lg-12">
                                                         <input type="hidden" value="<%= id%>" name="userId" />
                                                         <input type="hidden" value="<%= token%>" name="token" />
                                                         <%- include('../user/passwordField.ejs'); %>
