Finish Volume Distribution Report. Add range of dates to generate report. Optimize Look and feel. Fix query services by date.

--- a/views/ajaxSnippets/validationResult.ejs
+++ b/views/ajaxSnippets/validationResult.ejs
@@ -129,6 +129,8 @@
                                 <i class="fa-solid fa-circle-check btn-icon-apepend m-2"></i>
                             </button>
                             <% } %>
+                            <% } else{ %>
+                            <p>Invalid Period.</p>
                             <% } %>
                         </div>
                         <% } %>
