--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -36181,6 +36181,9 @@ label.required:after {
         font-size: 1.0rem;
     }
 
+    #form-genrate-report .input-group-append {
+        width: 100%;
+    }
 }
 
 .cars-btn {
