Bug fixes on the renew subscription functionality.

--- a/views/partials/subscriptions/checkoutScript.ejs
+++ b/views/partials/subscriptions/checkoutScript.ejs
@@ -53,7 +53,8 @@
                         body: JSON.stringify({
                             subscriptions,
                             email: email,
-                            backURL: 'subscribe'
+                            backURL: 'subscribe',
+                            renew: false
                         })
                     })
                         .then((result) => result.json())
